syntax="proto3";
package account.acctsvc;

option go_package = "account/acctsvc";

import "acct_def.proto";

service AccountSvc {
    rpc GetAccount(account.GetAccountReq) returns (account.GetAccountRsp){}
}