syntax="proto3";
package account;

option go_package = "account";


message GetAccountReq{
    int64   ID  = 1;
}

message GetAccountRsp{
    Account acct = 1;
}

message Account {
    int64       id          = 1;
    string      name        = 2;
    string      email       = 3;
    string      password    = 4;
}